--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-'<html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,19 +29,13 @@
         hr {
             color: #dce1e6;
         }
-            li {
-            margin-top: 5px;
-            padding: 5px;
-            font-weight: bold;
-        }
-    </style>
+      </style>
 </head>
 <body>
     <div class="container">
         <img width="560" height="315" src="https://raw.githubusercontent.com/sbr-rodrigues/Profile/refs/heads/main/Portif%C3%B3lio%20Banner%20Sabrina%20Rodrigues.gif" alt="Capa Perfil-profissional">
        
-        <h1>
-Business Intelligence: Instituto Localiza</h1>
+        <h1>Business Intelligence: Instituto Localiza</h1>
         <p>Resolução dos <strong>desafios</strong> para oPrograma de formação em BI para mulheres, com duração de 6,5 meses, mentoria de carreira e conexões com o mercado de trabalho..</p>
         <hr>
         <h2>DESAFIO 1:</h2>
@@ -93,6 +87,12 @@ Business Intelligence: Instituto Localiza</h1>
         <section>
         <iframe width="603" height="480" src="https://www.youtube.com/embed/vsQ3QPdIUUQ" title="Business Intelligence" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
+     <footer>
+        <p>
+          <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank">Visite o meu Linkedin</a>
+          <a href="https://github.com/sbr-rodrigues" target="_blank">Visite o meu GitHub</a>
+        </p>
+        </footer>
     </div>
-</body>
+  </body>
 </html>
